# apps/api/docs/swagger.json
@@ -128,6 +128,57 @@
       }
     },
     "/mainTypes/{mainTypeId}": {
+      "put": {
+        "description": "Update an existing main type by mainTypeId",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["MainTypes"],
+        "summary": "Update mainType by mainTypeId",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "MainType ID",
+            "name": "mainTypeId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "mainType payload",
+            "name": "mainType",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/mainType.UpdateMainTypeDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Catégorie mise à jour avec succés",
+            "schema": {
+              "$ref": "#/definitions/request.SuccessUpdateRequest"
+            }
+          },
+          "400": {
+            "description": "Données invalides",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "404": {
+            "description": "Catégorie non trouvée",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "500": {
+            "description": "Erreur interne",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          }
+        }
+      },
       "delete": {
         "description": "Delete a main type by id",
         "produces": ["application/json"],
@@ -280,6 +331,57 @@
       }
     },
     "/subTypes/{subTypeId}": {
+      "put": {
+        "description": "Update an existing sub type by subTypeId",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["SubTypes"],
+        "summary": "Update subType by subTypeId",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "Subtype ID",
+            "name": "subTypeId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "subType payload",
+            "name": "subType",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/subType.UpdateSubTypeDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Sous-catégorie mise à jour avec succés",
+            "schema": {
+              "$ref": "#/definitions/request.SuccessUpdateRequest"
+            }
+          },
+          "400": {
+            "description": "Données invalides",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "404": {
+            "description": "Sous-catégorie non trouvée",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "500": {
+            "description": "Erreur interne",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          }
+        }
+      },
       "delete": {
         "description": "Delete a subtype by id",
         "produces": ["application/json"],
@@ -510,6 +612,21 @@
         }
       }
     },
+    "mainType.UpdateMainTypeDto": {
+      "type": "object",
+      "required": ["color", "name"],
+      "properties": {
+        "color": {
+          "type": "string",
+          "example": "#000000"
+        },
+        "name": {
+          "type": "string",
+          "maxLength": 25,
+          "example": "Restaurant"
+        }
+      }
+    },
     "request.ErrorRequest": {
       "type": "object",
       "properties": {
@@ -568,6 +685,19 @@
         }
       }
     },
+    "request.SuccessUpdateRequest": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "integer",
+          "example": 0
+        },
+        "success": {
+          "type": "boolean",
+          "example": true
+        }
+      }
+    },
     "subType.CreateSubTypeDto": {
       "type": "object",
       "required": ["color", "main_type_id", "name"],
@@ -579,6 +709,21 @@
         "main_type_id": {
           "type": "integer",
           "example": 1
+        },
+        "name": {
+          "type": "string",
+          "maxLength": 25,
+          "example": "Buffet à volonté"
+        }
+      }
+    },
+    "subType.UpdateSubTypeDto": {
+      "type": "object",
+      "required": ["color", "name"],
+      "properties": {
+        "color": {
+          "type": "string",
+          "example": "#000000"
         },
         "name": {
           "type": "string",
