# apps/api/mainType/routes.go
@@ -8,5 +8,6 @@ import (
 func RegisterMainTypeRoutes(app *fiber.App, client *ent.Client) {
 	app.Get("/mainTypes", GetMainTypes(client))
 	app.Post("/mainTypes", CreateMainType(client))
+	app.Put("/mainTypes/:mainTypeId", UpdateMainTypeByMainTypeId(client))
 	app.Delete("/mainTypes/:mainTypeId", DeleteMainTypesById(client))
 }
