# apps/api/subType/dto.go
@@ -5,3 +5,8 @@ type CreateSubTypeDto struct {
 	Color      string `json:"color" example:"#000000" validate:"required"`
 	MainTypeID int    `json:"main_type_id" example:"1" validate:"required"`
 }
+
+type UpdateSubTypeDto struct {
+	Name  string `json:"name" example:"Buffet à volonté" validate:"required,max=25"`
+	Color string `json:"color" example:"#000000" validate:"required"`
+}
